--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ repositories {
 
 dependencies {
 
+
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'org.projectlombok:lombok:1.18.26'
 
-    implementation 'org.json:json:20231013'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.0-rc1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0-rc1'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
